--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Quiz</title>
+    <title>The Coding Quiz</title>
     <link rel="stylesheet" href="style2.css">
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div id="jumbotron">
             <h1 class="display-4" style="text-align: center;">The Coding Quiz</h1>
-            <p class="lead" style="text-align: center;">5 Questions 10 seconds to answer each. Results displayed at the bottom right & at the end.</p>
+            <p class="lead" style="text-align: center;">5 Questions 25 seconds to answer each. Results displayed at the bottom right & at the end.</p>
         </div>
     </div>
     <div id="container">
